--- a/app/public/css/head.css
+++ b/app/public/css/head.css
@@ -10,11 +10,12 @@
     align-items: stretch;
     margin-bottom: 0;
     padding: 0;
-    height:48px;
+    height:68px;
     width: 100%;
     position: relative;
     z-index: 1000;
     flex-shrink: 0;
+    padding-top: 20px;
 }
 .ui.segment.headContent .leftlnk{
     width: 25%;
@@ -65,4 +66,9 @@
 }
 .communityMoreLnk > div:first-child{
     border-bottom: 1px solid #EEE;
+}
+
+
+.ui.segment.headContent .leftlnk button i.icon.angle.left:before{
+    font-size: 30px;
 }
