--- a/app/public/css/page.css
+++ b/app/public/css/page.css
@@ -1,7 +1,12 @@
 .pageWamp{
-    position: relative;
-    height: 100%;
-    width: 100%;
+    position: fixed;
+    right: 0;
+    left: 0;
+    top : 0;
+    bottom: 0;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
  }
 .messageCo{
     display: flex;
