--- a/app/public/css/shopping.css
+++ b/app/public/css/shopping.css
@@ -4,6 +4,7 @@
     flex-shrink: 1;
     display: flex;
     flex-direction: column;
+    width: 100%
 }
 .shoppingPage .weui-actionsheet_toggle{
     background: #FFF;
