--- a/app/public/css/shoppingprolist.css
+++ b/app/public/css/shoppingprolist.css
@@ -1,7 +1,7 @@
 .pageWamp >div.ProlistPage {
     background: #EEE;
     position: fixed;
-    top: 20px;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
@@ -31,7 +31,6 @@
     margin-left: 10px;
     margin-right: 10px;
     font-size: 14px;
-    width: 100%;
     flex-grow: 1;
 
 }
@@ -79,6 +78,8 @@
 .ProlistPage .proList .li .name {
     font-size: 14px;
     padding: 10px 10px 0 10px;
+    align-self: stretch;
+    flex-grow: 1;
 }
 
 .ProlistPage .proList .li .price {
