--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -38,7 +38,7 @@
 }
 .homePageWamp {
     width: 100%;
-    display: block;
+    display: flex;
     flex-direction: column;
     flex-grow: 1;
     overflow: scroll;
@@ -62,7 +62,15 @@
     display: flex;
     flex-direction: column;
     padding-top: 65px;
+
 }
+
+.headContentInfo .nodata{
+    line-height: 100px;
+    font-size: 25px;
+    color: #FFF;
+}
+
 .headContentInfo .i1{
     color: #FFF;
 }
