--- a/app/public/css/pay.css
+++ b/app/public/css/pay.css
@@ -11,10 +11,12 @@
     background: #5596d6;
     display: flex;
     align-items: center;
-    height: 48px;
+    height: 68px;
     width: 100%;
     z-index: 1000;
     flex-shrink: 0;
+    padding-top: 20px;
+
 }
 .PayPage .PayPageBody{
     flex-grow: 1;
@@ -52,7 +54,7 @@
     align-items: center;
     padding-left: 10px;
     position: absolute;
-    top: 0;
+    top: 20px;
     left: 0;
     height: auto;
     align-self: stretch;
