--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -1,11 +1,14 @@
 .homePage{
-    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: linear-gradient(0deg, #5771c5, #5596d6);
     padding: 0 0 10px 0;
     flex-shrink: 0;
+    min-height: 311px;
+    position: relative;
+    z-index: 1000;
+    display: flex;
+    justify-content: flex-start;
 }
 .homePage .toolBar{
     background: none;
@@ -126,7 +129,10 @@
     padding: 5px 15px;
     border-radius: 100px;
     font-size: 14px;
-    color: #FFF
+    color: #FFF;
+    display: flex;
+    margin: 0 15px;
+    justify-content: center;
 }
 .headInfo .headInfoborder {
     border-right: 1px solid #7abbf5;
@@ -190,4 +196,17 @@
 }
 .homePage .swiper-container.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet{
     margin: 0 2px;
+}
+.homePageWamp .homePageList{
+    flex-grow: 1;
+    -webkit-flex-grow: 1;
+    background: #FFF;
+    list-style: none;
+    padding: 15px;
+    margin: 0px;
+    flex-shrink: 0;
+}
+.homePage .toolBar{
+    color:#FFF;
+    font-size:18px;
 }
