--- a/app/public/css/newdevice.css
+++ b/app/public/css/newdevice.css
@@ -4,14 +4,17 @@
     overflow: scroll;
 }
 .addnewdevice .tt{
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
+    display: flex;
 }
 .addnewdevice .tt img{
     width: 100%;
+    align-self: center;
 }
 .addnewdevice .fm{
     display: flex;
     flex-direction: column;
+    padding-top: 20px;
 }
 .addnewdevice .fm .device2_text{
     padding: 30px 0;
@@ -21,25 +24,57 @@
     display: flex;
     font-size: 20px;
     flex-direction: column;
-    padding: 15px;
     padding-top: 0;
 }
 .addnewdevice .fm .device2_text>div{
     display: flex;
     flex-grow: 1;
     align-self: stretch;
-    color: #333;
+    color: #111;
     justify-content: space-between;
-    border-bottom: 1px solid #EEE;
+    border-bottom: 1px solid #DDD;
+    align-items: center;
 }
 .addnewdevice .fm .device2_text>div:active{
     background: #EEE;
 }
+.addnewdevice .fm .device2_text>div.sel{
+    background: #EEE;
+    color: #888;
+     overflow: hidden;
+}
 .addnewdevice .fm .device2_text>div div{
     font-size: 16px;
     font-weight: 100;
-    line-height: 50px;
+    padding:10px 15px;
+
 }
+.addnewdevice .fm .device2_text>div div:active{
+    background: #EEE;
+}
+.addnewdevice .fm .device2_text>div div.mac,
+.addnewdevice .fm .device2_text>div div.ip{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+.addnewdevice .fm .device2_text>div div.ip{
+    padding-right: 25px;
+    font-size: 18px;
+}
+.addnewdevice .fm .device2_text>div div.ip .seltxt{
+    font-weight: bold;
+    position: absolute;
+    background: #DDD;
+    width: 100px;
+    text-align: center;
+    transform: rotate(45deg);
+    top: -3px;
+    right: -34px;
+    font-size: 12px;
+}
+
+
 .addnewdevice .fm .input{
     margin: 5px 10% 10px 10%;
     display: flex;
