--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -6,7 +6,8 @@
     flex-shrink: 0;
     min-height: 311px;
     position: relative;
-    z-index: 1000;
+    background-image: linear-gradient(0deg, #5771c5, #5596d6);
+
     display: flex;
     justify-content: flex-start;
 }
