--- a/app/public/css/newtopic.css
+++ b/app/public/css/newtopic.css
@@ -1,6 +1,6 @@
 .newtopicPage{
     position: fixed;
-    top:20px;
+    top:0;
     bottom: 0;
     left: 0;
     right: 0;
@@ -32,8 +32,6 @@
     padding-bottom: 15px;
 }
 .newtopicbtn{
-    position: absolute;
-    bottom: 0;
     display: flex;
     width: 100%;
 }
@@ -69,6 +67,7 @@
 
 .newtopicPage form{
     flex-grow: 1;
+    overflow: scroll;
 }
 .newtopicPage .loginPageTop{
     background: #FFF;
