--- a/app/public/css/user.css
+++ b/app/public/css/user.css
@@ -254,13 +254,18 @@
 
 .UserLoginPage .loginform .yanzhenBtn {
     position: absolute;
-    width: 120px;
+    width: 100px;
     height: 44px;
     right: 10%;
     z-index: 1000;
     border-radius: 0;
     top: 0;
     margin: 0;
+    background: #2185d0;
+    color: #FFF;
+    line-height: 44px;
+    text-align: center;
+    font-size: 14px;
 }
 
 .UserLoginPage .logininput .input, .UserLoginPage .loginform .remember {
