--- a/app/public/css/feed.css
+++ b/app/public/css/feed.css
@@ -30,11 +30,18 @@
     display: flex;
     flex-wrap: wrap;
 }
-.feedContent .images > div{
+.feedContent .images > div.communityImg{
     width: 33.33%;
     display: flex;
     align-self: stretch;
     align-items: flex-start;
+    padding-top: 33.3%;
+    height: 0;
+    overflow: hidden;
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    border: 1px solid #FFF;
 }
 
 
