--- a/app/public/css/shoppingprolist.css
+++ b/app/public/css/shoppingprolist.css
@@ -6,23 +6,36 @@
     left: 0;
     right: 0;
     overflow: hidden;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start
+    -moz-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
 }
 
 .ProlistPage .searchHead {
     background: #5596d6;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
     position: relative;
+    -moz-flex-shrink: 0;
+    -webkit-flex-shrink: 0;
     flex-shrink: 0;
 }
 
 .ProlistPage .searchHead .ui.input {
+    -webkit-flex-grow: 1;
     flex-grow: 1;
     margin: 10px 0;
     margin-right: 45px;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
 }
 
@@ -31,6 +44,8 @@
     margin-left: 10px;
     margin-right: 10px;
     font-size: 14px;
+    -webkit-flex-grow: 1;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
 
 }
@@ -43,8 +58,14 @@
 .ProlistPage .searchHead i.icon {
     font-size: 30px;
     color: #FFF;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
     padding-left: 10px;
 }
@@ -54,8 +75,13 @@
 }
 
 .ProlistPage .proList {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
     align-self: flex-start;
     align-items: flex-start;
@@ -64,7 +90,11 @@
 
 .ProlistPage .proList .li {
     width: 49.5%;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    
+    -webkit-flex-direction: column;
     flex-direction: column;
     background: #FFF;
     align-self: stretch;
@@ -78,7 +108,9 @@
 .ProlistPage .proList .li .name {
     font-size: 14px;
     padding: 10px 10px 0 10px;
+    -webkit-align-self: stretch;
     align-self: stretch;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
 }
 
@@ -96,14 +128,22 @@
 }
 
 .ProlistPage .hotLnk {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     padding-left: 0;
     width: 100%;
     overflow-x: scroll;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
     background: #FFF;
     border-bottom: 1px solid #EEE;
+    -moz-flex-shrink: 0;
+    -webkit-flex-shrink: 0;
     flex-shrink: 0;
 }
 
@@ -111,7 +151,10 @@
     margin: 10px;
     margin-right: 0;
     font-size: 14px;
+    -moz-flex-shrink: 0;
+    -webkit-flex-shrink: 0;
     flex-shrink: 0;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
     text-align: center;
 }
