--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -23,9 +23,9 @@
     display: -webkit-box;
     display: -webkit-flex;
     display: flex;
-    -moz-justify-content: center;
-    -webkit-justify-content: center;
-    justify-content: center;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
     -webkit-box-align: center;
     -webkit-align-items: center;
     align-items: center;
@@ -105,17 +105,29 @@
     flex-direction: column;
     flex-grow: 1;
     overflow: scroll;
-    padding-top: 20px;
-    background: #5596d6
+    
 }
 .headContent{
     text-align: center;
     padding: 10px;
     position: relative;
 }
-.headContent img{
+.headContent img.bg{
     width: 220px;
+    animation:xuanzhuan 10s infinite;
+    -webkit-animation:xuanzhuan 10s infinite;
+    animation-timing-function:linear;
+    -webkit-animation-timing-function:linear;
 }
+@keyframes xuanzhuan{
+    from {transform: rotate(0deg);}
+    to {transform: rotate(360deg);}
+}
+.headContent img.info{
+    width: 220px;
+    margin-top: -220px;
+}
+
 .headContentInfo{
     position: absolute;
     width: 100%;
@@ -158,7 +170,7 @@
     -webkit-align-items: center;
     align-items: center;
 
-    margin-bottom: 22px;
+    margin-bottom: 20px;
 }
 .headContentInfo .i3 span{
     color: #7ffef8;
@@ -294,4 +306,5 @@
 .homePage .toolBar{
     color:#FFF;
     font-size:18px;
+    padding-top: 20px;
 }
