--- a/app/public/css/aboutus.css
+++ b/app/public/css/aboutus.css
@@ -1,5 +1,7 @@
 .aboutusPage{
     background: #FFF;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     position: fixed;
