--- a/app/public/css/addcartdilog.css
+++ b/app/public/css/addcartdilog.css
@@ -41,6 +41,8 @@
     transform: translate(0, 0);
 }
 .addcartdilog .addcartdilogProinfo{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     padding: 20px;
     border-bottom: 1px solid #EEE;
@@ -52,8 +54,14 @@
     border:1px solid #EEE;
 }
 .addcartdilog .addcartdilogProinfo div{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
+    justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
 }
 .addcartdilog .addcartdilogProinfo div span:first-child{
@@ -63,13 +71,21 @@
     font-size: 18px;
 }
 .addcartdilog .setnumber{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
     padding:20px;
     border-bottom: 1px solid #EEE;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
 }
 .addcartdilog .setnumber div {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
 }
 
@@ -77,8 +93,14 @@
     height: 30px;
     width: 30px;
     border:1px solid #EEE;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
 }
 .addcartdilog .setnumber div span.input{
