--- a/app/public/css/applicationreturns.css
+++ b/app/public/css/applicationreturns.css
@@ -5,6 +5,8 @@
     margin-bottom: 20px;
 }
 .applicationreturnsPage .proinfo .li{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     border-bottom: 1px solid #EEE;
     padding: 15px;
@@ -16,25 +18,44 @@
     border: 1px solid #EEE;
 }
 .applicationreturnsPage .proinfo .li >div{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
     align-items: stretch;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    align-items: stretch;
+    justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
     padding-left: 15px;
     font-size:14px;
 }
 .applicationreturnsPage .proinfo .li >div .price {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
 }
 .applicationreturnsPage .proinfo .li >div .price span:first-child{
     color: #F00;
 }
 .applicationreturnsPage .list .li{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     background: #FFF;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
     justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     padding: 5px 15px;
     font-size: 14px;
     border-bottom: 1px solid #EEE;
@@ -44,6 +65,7 @@
     text-align: right;
 }
 .applicationreturnsPage .list .li  .rightinput{
+    -webkit-flex-grow: 1;
     flex-grow: 1;
     text-align: right;
 }
@@ -64,8 +86,15 @@
     margin-bottom: 5px;
 }
 .applicationreturnsPage .list .li.explain{
+    -webkit-flex-direction: column;
     flex-direction: column;
     justify-content: flex-start;
+    -moz-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+    align-items: flex-start;
+    -webkit-box-align: flex-start;
+    -webkit-align-items: flex-start;
     align-items: flex-start;
 }
 .applicationreturnsPage .list .li.explain textarea{
@@ -74,11 +103,16 @@
     resize: none;
 }
 .applicationreturnsPage .subBtn{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
     justify-content: center;
     padding: 30px 50px 0 50px;
 }
 .applicationreturnsPage .subBtn .ui.primary.button{
     border-radius: 50px;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
 }
