--- a/app/public/css/device.css
+++ b/app/public/css/device.css
@@ -1,5 +1,8 @@
 .deviceList.ui.selection.list {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
     margin: 0;
 }
@@ -7,8 +10,16 @@
     padding: 0;
 }
 .deviceLi{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     align-items: stretch;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    align-items: stretch;
+    justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
     border-bottom: 1px solid #EEE;
     padding: 5px 10px;
@@ -20,11 +31,23 @@
     width: 100%;
 }
 .deviceLi .info{
-    flex-grow: 1;
+    
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-grow: 1;
+    flex-grow: 1;
     justify-content: flex-start;
+    -moz-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
+
+    -webkit-flex-direction: column;
     flex-direction: column;
+
+    -webkit-box-align: flex-start;
+    -webkit-align-items: flex-start;
     align-items: flex-start;
+    
     padding: 15px;
 }
 .deviceLi .info .tit{
@@ -32,7 +55,10 @@
     margin-bottom: 15px;
 }
 .deviceLi .info .address{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
 }
 .deviceLi .info .address span{
