--- a/app/public/css/distribution.css
+++ b/app/public/css/distribution.css
@@ -1,8 +1,12 @@
 .distributionPage {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
     width: 100%;
     background: #F5F5F5;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
     overflow: hidden;
 }
@@ -19,9 +23,16 @@
 }
 
 .distributionPage .userInfo {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
 }
 
@@ -52,12 +63,19 @@
 }
 
 .distributionPage .ui.secondary.pointing.menu .item {
+    -webkit-flex-grow: 1;
     flex-grow: 1;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
     justify-content: center;
     margin: 0;
     font-weight: 100;
     height: 40px;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
 }
 
@@ -69,10 +87,17 @@
 }
 
 .distributionPage .cont {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
     background: #FFF;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
+    justify-content: flex-start;
+    -moz-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
     justify-content: flex-start;
     overflow: scroll;
 }
@@ -83,7 +108,12 @@
     padding: 5px 10px;
     background: #eff4fa;
     border: 1px solid #EEE;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
 }
 
@@ -101,8 +131,12 @@
 }
 
 .distributionPage .cont .li div {
+    -webkit-flex-grow: 1;
     flex-grow: 1;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
 }
 
@@ -113,22 +147,36 @@
 
 .bottomBttn {
     width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
     justify-content: center;
     border-top: 1px solid #EEE;
     background: #EEE;
     padding: 5px 20%;
+    
+    -moz-flex-shrink: 0;
+    -webkit-flex-shrink: 0;
     flex-shrink: 0;
 }
 
 .bottomBttn span{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     border-radius: 5px;
     background: #F00;
     color: #FFF;
     font-size: 14px;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
     height: 40px;
 }
@@ -137,9 +185,18 @@
 }
 
 .distributionInfoPage .proinfo .li >div{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
     align-items: stretch;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    align-items: stretch;
+    justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
     padding: 15px;
     font-size:14px;
@@ -147,18 +204,26 @@
     border-bottom: 1px solid #EEE;
 }
 .distributionInfoPage .proinfo .li >div>div{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 .distributionInfoPage .proinfo .li >div .price {
     display: flex;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
     font-size: 18px;
     color: #F00;
 }
 .distributionInfoPage .proinfo .li >div .time{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
 }
 .distributionInfoPage .proinfo .li >div .time span{
@@ -174,7 +239,12 @@
 }
 .distributionInfoPage .list .li{
     background: #FFF;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
     border-bottom: 1px solid #EEE;
     padding: 2px 15px;
