首页样式错乱，兼容ios8

--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -157,6 +157,7 @@
     color: #FFF;
     font-weight: bold;
     margin-bottom: 5px;
+    display: block;
 }
 .headContentInfo .i3 {
     display: -webkit-box;
