--- a/app/public/css/feed.css
+++ b/app/public/css/feed.css
@@ -2,6 +2,9 @@
     width: 100%;
     background: #EEE;
     justify-content: flex-start;
+    -moz-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
 }
 .feedPage #ListInside >div{
     margin-bottom: 15px;
@@ -19,6 +22,8 @@
     padding-top: 10px;
 }
 .feedHead {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     padding: 0 15px
 }
@@ -27,13 +32,22 @@
     border-bottom: 1px solid #EEE;
 }
 .feedContent .images{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 .feedContent .images > div.communityImg{
     width: 33.33%;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-align-self: stretch;
     align-self: stretch;
+    align-items: flex-start;
+    -webkit-box-align: flex-start;
+    -webkit-align-items: flex-start;
     align-items: flex-start;
     padding-top: 33.3%;
     height: 0;
@@ -47,7 +61,12 @@
 
 .feedPage .PageHead {
     background: #5596d6;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
     left: 0;
     top: 0;
@@ -67,13 +86,19 @@
 }
 
 .feedPage .PageHead .imgcont {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     width: 50px;
     position: absolute;
     height: 100%;
     right: 0;
     top: 0;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
 }
 
@@ -84,8 +109,14 @@
 .feedPage .PageHead i.icon {
     font-size: 30px;
     color: #FFF;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
     padding-left: 10px;
     position: absolute;
@@ -125,6 +156,7 @@
 }
 .ui.feed>.event>.content>.feedContent .extra.images img{
     margin: 3px;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
 }
 .feedHead .label {
@@ -135,11 +167,15 @@
     border-radius: 50%;
     width: 44px;
     height: 44px;
+    -webkit-align-self: flex-start;
     align-self: flex-start;
 }
 
 .feedHead .summary {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column
 }
 
@@ -158,8 +194,14 @@
 
 .topTip {
     background: #EEE;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
     padding:6px 0;
 }
@@ -169,9 +211,16 @@
     border-radius: 6px;
     color: #FFF;
     height: 30px;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
     padding:0 8px;
+    justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
 }
 
@@ -191,8 +240,12 @@
 }
 .ui.feed>.event>.content .myMeta .addCommunity,
 .ui.feed>.event>.content .myMeta > a{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     width: 50%;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
     justify-content: center;
 }
 .communityInfo .feedContent{
@@ -203,8 +256,14 @@
 }
 .ui.feed.communityInfo .event .content .avatarlist{
     padding: 10px 15px;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
 }
 .ui.feed.communityInfo .event .content .avatarlist:active{
@@ -217,12 +276,22 @@
     margin: 0;
 }
 .myCommentAction{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
 }
 .myCommentLnk{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
 }
 .myCommentLnk > div{
@@ -266,12 +335,16 @@
 }
 
 .feedBottomReply{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    justify-content: space-between;
     align-items: center;
     background: #FFF;
     border-top: 1px solid #EEE;
@@ -327,23 +400,44 @@
     padding-bottom: 0
 }
 .pageWamp >div.commentInfoPage{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
-    flex-direction: column;
+    -moz-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
     justify-content: flex-start;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
     align-items: stretch;
 }
 .commentInfoPage .tc{
     flex-shrink: 1;
+    -moz-flex-shrink: 1;
+    -webkit-flex-shrink: 1;
+    flex-shrink: 1;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
     align-items: stretch;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
     overflow: scroll;
+    flex-grow: 1;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
 } 
 .commentInfoPage .tc > div{
     width: 100%
 }
 .commentInfoPage .tb .feedBottomReply{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     position: relative;
 }
@@ -351,20 +445,43 @@
 
 .commentInfoPage .th{
     flex-shrink: 0;
+    -moz-flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+    flex-shrink: 0;
 }
 .feedPage{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
     justify-content: flex-start;
+    -moz-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
     align-items: stretch;
     overflow: hidden;
 }
 
 .feedPage .tc{
     flex-shrink: 1;
+    -moz-flex-shrink: 1;
+    -webkit-flex-shrink: 1;
+    flex-shrink: 1;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     align-items: stretch;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    align-items: stretch;
     justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    -webkit-flex-direction: column;
     flex-direction: column;
     overflow:hidden;
     position: fixed;
@@ -377,6 +494,9 @@
     width: 100%
 }
 .feedPage .tb .feedBottomReply{
+    display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     position: relative;
 }
