--- a/app/public/css/newnav.css
+++ b/app/public/css/newnav.css
@@ -9,6 +9,10 @@
     padding-top: 20px;
 }
 #newNavHeadContent .title {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
     text-align: center;
     line-height: 48px;
@@ -16,6 +20,9 @@
     font-size: 16px;
     position: relative;
     z-index: 1;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
 }
 #newNavHeadContent .leftlnk{
     height: 48px;
