--- a/app/public/css/user.css
+++ b/app/public/css/user.css
@@ -515,7 +515,13 @@
     bottom: 0;
     width: 100%;
     display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
     justify-content: space-between;
+    align-items: stretch;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
     align-items: stretch;
 }
 .ChangeUsernamePage .btnSub button.ui.primary.button{
