--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -65,16 +65,14 @@
 .homePage .nodevice{
     display: -webkit-box;
     display: -webkit-flex;
-    display: flex;
-    
+    display: -ms-flexbox;
     -moz-justify-content: center;
     -webkit-justify-content: center;
     justify-content: center;
-
+    display: flex;
     -webkit-box-align: center;
     -webkit-align-items: center;
     align-items: center;
-
     -webkit-flex-direction: column;
     flex-direction: column;
     border-radius: 170px;
@@ -105,7 +103,6 @@
     flex-direction: column;
     flex-grow: 1;
     overflow: scroll;
-    
 }
 .headContent{
     text-align: center;
