--- a/app/public/css/bigimg.css
+++ b/app/public/css/bigimg.css
@@ -5,7 +5,8 @@
     z-index: 10000;
     top: 0;
     left: 0;
-    background: rgba(0,0,0,.2);
+    bottom: 0;
+    background: rgba(0,0,0,.6);
     display: -webkit-box;
     display: -webkit-flex;
     display: flex;
@@ -16,6 +17,15 @@
     -webkit-box-align: stretch;
     -webkit-align-items: stretch;
     align-items: stretch;
+}
+.showBigImg >div{
+    -webkit-align-self: stretch;
+    align-self: stretch;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 .showBigImg img{
     max-width: 100%;
