--- a/app/public/css/feed.css
+++ b/app/public/css/feed.css
@@ -68,6 +68,9 @@
     -webkit-box-align: center;
     -webkit-align-items: center;
     align-items: center;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
     left: 0;
     top: 0;
     width: 100%;
@@ -190,6 +193,7 @@
 .ui.feed > .event > .content .summary > .summaryName{
     font-size: 18px;
     margin-bottom: 5px;
+    display: block;
 }
 
 .topTip {
