--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -31,6 +31,9 @@
     align-items: center;
     width: 100%;
 }
+.homePage .toolBar + div{
+    width: 100%;
+}
 .homePage .toolBar .left,.homePage .toolBar .right{
     color: #FFF;
     font-size: 30px;
@@ -79,6 +82,7 @@
     height: 170px;
     border: 1px solid #FFF;
     color: #FFF;
+    text-align: center;
 }
 .homePage .nodevice img{
     width: 40%;
@@ -101,6 +105,7 @@
     display: flex;
     -webkit-flex-direction: column;
     flex-direction: column;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
     overflow: scroll;
 }
