--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -32,11 +32,22 @@ input, textarea{
     top: 0;
 }
 .pageStyle{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+
+    justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
     padding: 0;
     flex-shrink: 1;
+    -moz-flex-shrink: 1;
+    -webkit-flex-shrink: 1;
+    flex-shrink: 1;
+    -webkit-align-self: stretch;
     align-self: stretch;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
 }
 
@@ -58,10 +69,20 @@ input, textarea{
     display: -webkit-flex;
     display: flex;
     justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    -webkit-flex-direction: column;
     flex-direction: column;
     background: #FFF;
+    -webkit-align-self: stretch;
     align-self: stretch;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
+    justify-content: flex-start;
+
+    -moz-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
     justify-content: flex-start;
 }
 
@@ -71,12 +92,17 @@ input, textarea{
     display: -webkit-flex;
     display: flex;
     justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
     bottom: 0;
     width: 100%;
     background: #EEE;
     border-top: 1px solid #CCC;
+    -moz-flex-shrink: 0;
+    -webkit-flex-shrink: 0;
     flex-shrink: 0;
-    z-index: 999
+    z-index: 1001
 }
 .homeBottom .ui.button{
     width: 25%;
@@ -84,8 +110,15 @@ input, textarea{
     display: -webkit-box;
     display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
     justify-content: center;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
     border-radius: 0;
     margin:0;
@@ -102,6 +135,9 @@ input, textarea{
     display: block;
 }
 .logisticsinfoPage{
+    justify-content: flex-start;
+    -moz-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
     justify-content: flex-start;
 }
 .ui.feed>.event>.content .meta .like:hover .icon{
