--- a/app/public/css/mycoupon.css
+++ b/app/public/css/mycoupon.css
@@ -1,13 +1,25 @@
 .myCouponPage{
     background: #F5F5F5;
     display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
 }
 .myCouponPage .ui.secondary.pointing.menu .item{
     width: 33.33%;
     text-align: center;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     justify-content: center;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
 }
 .myCouponPage .ui.secondary.pointing.menu{
@@ -21,10 +33,14 @@
     background: #FFF;
 }
 .myCouponList{
+    -webkit-flex-grow: 1;
     flex-grow: 1;
     overflow: hidden;
 }
 .myCouponList .item{
+    display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     margin:10px 15px;
     padding-left: 7px;
@@ -37,9 +53,19 @@
     flex-shrink: 0;
     background:#FFF;
     display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
 }
 .myCouponList .item .leftcont span{
     color: #5694dd;
@@ -53,17 +79,40 @@
 }
 .myCouponList .item .cont {
     display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
+
     align-items: stretch;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    align-items: stretch;
+    justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
 }
 .myCouponList .item .cont div{
     background: #FFF;
     display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
     justify-content: center;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    align-items: flex-start;
+    -webkit-box-align: flex-start;
+    -webkit-align-items: flex-start;
     align-items: flex-start;
     padding-left: 10px;
 }
@@ -82,8 +131,17 @@
 }
 .myCouponPage .selcouponBtn{
     display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
     justify-content: center;
     align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
     height: 50px;
     margin: 10px 15px;
     flex-shrink: 0;
