--- a/app/public/css/mymessage.css
+++ b/app/public/css/mymessage.css
@@ -1,17 +1,31 @@
 .myMessage{
     background: #F5F5F5;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
     overflow: hidden;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
     height: 1;
 }
 .messageList{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
     overflow: visible;
     align-items: stretch;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    align-items: stretch;
+    flex-shrink: 1;
+    -moz-flex-shrink: 1;
+    -webkit-flex-shrink: 1;
     flex-shrink: 1;
     position: relative;
     overflow: hidden;
@@ -32,73 +46,82 @@
     border-bottom: 1px solid #EEE;
 }
 .messageList .items .lnk {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    justify-content: space-between;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
     color: #999;
 }
 
 #wrapper {
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: #CCC;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: #CCC;
 }
 
 #scroller {
-  position: absolute;
-  z-index: 1;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-  width: 100%;
-  -webkit-transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  -o-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-text-size-adjust: none;
-  -moz-text-size-adjust: none;
-  -ms-text-size-adjust: none;
-  -o-text-size-adjust: none;
-  text-size-adjust: none;
+    position: absolute;
+    z-index: 1;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    width: 100%;
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    -ms-text-size-adjust: none;
+    -o-text-size-adjust: none;
+    text-size-adjust: none;
 }
-
 #scroller ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  text-align: left;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    text-align: left;
 }
-
 #scroller ul li {
-  padding: 0 10px;
-  height: 40px;
-  line-height: 40px;
-  border-bottom: 1px solid #ccc;
-  border-top: 1px solid #fff;
-  background-color: #fafafa;
-  font-size: 14px;
-
+    padding: 0 10px;
+    height: 40px;
+    line-height: 40px;
+    border-bottom: 1px solid #ccc;
+    border-top: 1px solid #fff;
+    background-color: #fafafa;
+    font-size: 14px;
 }
-
 .messageDetail {
     display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
     justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-flex-direction: column;
     flex-direction: column;
 }
 .messageDetail .list{
-  overflow: scroll;
-  flex-grow: 1;
-  padding: 0 20px;
+    overflow: scroll;
+    -webkit-flex-grow: 1;
+    flex-grow: 1;
+    padding: 0 20px;
 }
 .messageDetail .list .time{
-  text-align: center;
+    text-align: center;
 }
 
 .messageDetail .tt{
@@ -116,12 +139,24 @@
     margin-top: 15px;
     border-top:1px solid #EEE;
     font-size: 16px;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
     justify-content: flex-start;
+    -moz-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+    -webkit-flex-direction: column;
     flex-direction: column;
     align-items: flex-start;
+    -webkit-box-align: flex-start;
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
+    -webkit-align-self: stretch;
     align-self: stretch;
+
 }
 .addcommunityHotlnk{
     position: fixed;
