--- a/app/public/css/myprofile.css
+++ b/app/public/css/myprofile.css
@@ -1,15 +1,26 @@
 .myProfilePage{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
     width: 100%;
     background: #F5F5F5;
 }
 .myProfilePage .headCont{
     background: linear-gradient(180deg, #5596d6, #337dc4);
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
     padding: 30px 0;
     position: relative;
+    -moz-flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+    flex-shrink: 0;
+    -moz-flex-shrink: 0;
+    -webkit-flex-shrink: 0;
     flex-shrink: 0;
     margin-top: -1px;
     padding-top: 50px;
@@ -19,7 +30,11 @@
     top: 90px;
     right: 15px;
     color: #FFF;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
 }
 .myProfilePage .headCont .signDom span.lnk{
@@ -33,10 +48,19 @@
     margin-right: 5px;
 }
 .myProfilePage .userInfo{
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
+    display: block;
+    text-align: center;
 }
 .myProfilePage .userInfo img.avatar{
     border-radius: 50%;
@@ -48,6 +72,7 @@
 .myProfilePage .userInfo .username{
     color: #FFF;
     font-size: 14px;
+    display: block;
 }
 .myProfilePage .userInfo .usertype {
     color: #FFF;
@@ -78,6 +103,7 @@
     text-align: center;
 }
 .myProfileBannerCont{
+    -webkit-flex-grow: 1;
     flex-grow: 1;
     overflow: scroll
 }
@@ -86,22 +112,30 @@
 }
 .myProfileBannerCont .l1{
     border-bottom: 1px solid #EEE;
-    display: flex;
     padding: 10px 15px;
-    justify-content: space-between;
+    padding-right: 30px;
     padding-right: 30px;
     background: url("/img/myprofile/15.png") no-repeat right center;
     background-size: 40px 40px;
+    display: block;
+    overflow: hidden;
 }
 .myProfileBannerCont .l1 span{
     font-size: 16px;
+    display: inline-block;
+    float: left;
 }
 .myProfileBannerCont .l1 span:last-child{
     font-size:14px;
     color: #999;
+    float: right;
 }
 .myProfileBannerCont .l2 {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
     border-bottom: 1px solid #EEE;
     margin-bottom: 20px;
@@ -109,16 +143,33 @@
 .myProfileBannerCont .l2 > div img{
     width: 40px;
 }
-
+.myProfileBannerCont .l2 > div span{
+    display: block;
+}
 .myProfileBannerCont .l2 > div{
     padding:5px 0 10px 0;
-    display: flex;
+    
+    -webkit-flex-direction: column;
     flex-direction: column;
     width: 25%;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
+    justify-content: center;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
     justify-content: center;
     color: #000;
     position: relative;
+    display: -webkit-flex;
+    display: block;
+    text-align: center;
+    display: box; /* OLD - Android 4.4- */
+    display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox; /* TWEENER - IE 10 */
+    display: -webkit-flex; /* NEW - Chrome */
+    display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
 
 .myProfileBannerCont .l2 > div > i{
@@ -128,8 +179,15 @@
     height: 16px;
     width: 16px;
     border-radius: 16px;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     justify-content: center;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
     position: absolute;
     top: 10px;
@@ -149,11 +207,23 @@
 .myProfileBannerCont .ll div{
     border-bottom: 1px solid #EEE;
     padding: 5px 15px;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     justify-content: flex-start;
+    -moz-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
     align-items: center;
     background: url("/img/myprofile/15.png") no-repeat right center;
     background-size: 40px 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: -webkit-flex;
+
 }
 .myProfileBannerCont .ll div img{
     width: 30px;
