--- a/app/public/css/page.css
+++ b/app/public/css/page.css
@@ -6,9 +6,16 @@
     bottom: 0;
     z-index: 1000;
     display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
  }
 .messageCo{
+    display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     position: fixed;
     top: 0;
@@ -16,6 +23,14 @@
     left: 0;
     justify-content: center;
     align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+
     z-index: 10000;
     background: rgba(0,0,0,.5);
 }
@@ -24,15 +39,35 @@
     min-height: 140px;
     justify-content: center;
     display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
     align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
     min-width: 160px;
 
 }
 .ui.success.message .header{
     font-size:18px;
     display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
 }
 .ui.success.message{
     background-color: rgba(51,204,51, .3);
