--- a/app/public/css/shoppingprolist.css
+++ b/app/public/css/shoppingprolist.css
@@ -20,6 +20,10 @@
     display: -webkit-box;
     display: -webkit-flex;
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: -webkit-flex;
     -webkit-box-align: center;
     -webkit-align-items: center;
     align-items: center;
@@ -30,13 +34,16 @@
 }
 
 .ProlistPage .searchHead .ui.input {
-    -webkit-flex-grow: 1;
-    flex-grow: 1;
+    
     margin: 10px 0;
     margin-right: 45px;
     display: -webkit-box;
-    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    display: -webkit-flex;
+    -webkit-flex-grow: 1;
+    flex-grow: 1;
+    width: 100%
 }
 
 .ProlistPage .searchHead .ui.input input {
@@ -47,7 +54,7 @@
     -webkit-flex-grow: 1;
     -webkit-flex-grow: 1;
     flex-grow: 1;
-
+    width: 100%
 }
 
 .ProlistPage .searchHead img {
